# up-with-fastapi

./: .gitignore  docker-compose.yml
src/backend/: Dockerfile  pyproject.toml
src/backend/app/: handlers.py  main.py  settings.py
src/backend/app/connectors/: database.py
src/backend/app/routers/: base.py
src/backend/app/routers/api/: base.py
src/backend/app/routers/api/v1/: cleanings.py
