[tool.poetry]
name = "up-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <y.orlov@fonmix.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
fastapi = "^0.82.0"
email-validator = "^1.3.0"
databases = "^0.7.0"
alembic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
